; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/phy/extr_adin.c_adin_phy_config_intr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/phy/extr_adin.c_adin_phy_config_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phy_device = type { i64 }

@PHY_INTERRUPT_ENABLED = common dso_local global i64 0, align 8
@ADIN1300_INT_MASK_REG = common dso_local global i32 0, align 4
@ADIN1300_INT_MASK_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.phy_device*)* @adin_phy_config_intr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @adin_phy_config_intr(%struct.phy_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.phy_device*, align 8
  store %struct.phy_device* %0, %struct.phy_device** %3, align 8
  %4 = load %struct.phy_device*, %struct.phy_device** %3, align 8
  %5 = getelementptr inbounds %struct.phy_device, %struct.phy_device* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @PHY_INTERRUPT_ENABLED, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load %struct.phy_device*, %struct.phy_device** %3, align 8
  %11 = load i32, i32* @ADIN1300_INT_MASK_REG, align 4
  %12 = load i32, i32* @ADIN1300_INT_MASK_EN, align 4
  %13 = call i32 @phy_set_bits(%struct.phy_device* %10, i32 %11, i32 %12)
  store i32 %13, i32* %2, align 4
  br label %19

14:                                               ; preds = %1
  %15 = load %struct.phy_device*, %struct.phy_device** %3, align 8
  %16 = load i32, i32* @ADIN1300_INT_MASK_REG, align 4
  %17 = load i32, i32* @ADIN1300_INT_MASK_EN, align 4
  %18 = call i32 @phy_clear_bits(%struct.phy_device* %15, i32 %16, i32 %17)
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %14, %9
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @phy_set_bits(%struct.phy_device*, i32, i32) #1

declare dso_local i32 @phy_clear_bits(%struct.phy_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
